# Indie-Studio

./: CMakeLists.txt  README.md  README.txt
release/media/maps/: map.irr
release/media/models/: bombe.3DS  bomberman_blue.3DS  bomberman_red.3DS  boot.3ds  shield.3DS
release/media/textures/: texture_shield.tga
sources/: Main.cpp
sources/Bomb/: Bomb.cpp  Bomb.hpp
sources/Character/: Character.cpp  Character.hpp
sources/CrossExplo/: CrossExplo.cpp  CrossExplo.hpp
sources/Event/: EventManager.cpp  EventManager.hpp
sources/Explosion/: Explosion.cpp  Explosion.hpp
sources/Game/: Game.cpp  Game.hpp
sources/Map/: Map.cpp  Map.hpp
sources/Menu/: EscMenu.cpp  EscMenu.hpp  MainMenu.cpp  MainMenu.hpp
sources/Music/: Music.cpp  Music.hpp
sources/PowerUp/: APowerUp.cpp  APowerUp.hpp  BombUp.cpp  BombUp.hpp  GodUp.cpp  GodUp.hpp  SpeedUp.cpp  SpeedUp.hpp
sources/SplashScreen/: SplashScreen.cpp  SplashScreen.hpp
sources/Timer/: Clock.cpp  Clock.hpp  Time.cpp  Time.hpp
sources/Wall/: Wall.cpp  Wall.hpp
sources/Window/: Window.cpp  Window.hpp
